[gd_scene load_steps=5 format=3 uid="uid://bfdkmmuoaorhe"]

[ext_resource type="Texture2D" uid="uid://cn5i0n0jdsgm3" path="res://images/fond_orange.jpeg" id="1_76ulo"]
[ext_resource type="Script" uid="uid://drhq3hhg2ev43" path="res://select_world.gd" id="1_qklif"]
[ext_resource type="Texture2D" uid="uid://6t8th1s7kqnx" path="res://images/world_1.png" id="3_ooxhb"]
[ext_resource type="Texture2D" uid="uid://cuhmbjolik2wr" path="res://images/retour.jpg" id="4_ooxhb"]

[node name="SelectWorld" type="Node"]
script = ExtResource("1_qklif")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_76ulo")

[node name="world_1" type="TextureButton" parent="."]
offset_left = 122.0
offset_top = 114.0
offset_right = 282.0
offset_bottom = 269.0
texture_normal = ExtResource("3_ooxhb")
ignore_texture_size = true
stretch_mode = 0

[node name="world_2" type="TextureButton" parent="."]
offset_left = 328.0
offset_top = 114.0
offset_right = 488.0
offset_bottom = 269.0
texture_normal = ExtResource("3_ooxhb")
ignore_texture_size = true
stretch_mode = 0

[node name="back" type="TextureButton" parent="."]
offset_left = 12.0
offset_top = 9.0
offset_right = 82.0
offset_bottom = 81.0
texture_normal = ExtResource("4_ooxhb")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="world_1" to="." method="_on_world_1_pressed"]
[connection signal="pressed" from="world_2" to="." method="_on_world_2_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
